--- a/html/css/index.css
+++ b/html/css/index.css
@@ -1,6 +1,6 @@
 
 
-html, body {margin: 0; height: 100%; overflow: hidden;}
+html, body {margin: 0; height: 100%; overflow-x: hidden;}
 
 h1{
   font-family: 'Dorsa', Helvetica, sans-serif;
